@@ -5,6 +5,15 @@
 #' @param colorPalette Named vector with color palette.
 #' The variable should be named with the corresponding element
 #' in \code{colorVar}.
+#' @param shapeVar String, variable of \code{data} for shape of the points.
+#' By default, same as \code{colorVar}.
+#' @param shapeLab String, label for \code{shapeVar}.
+#' Set by default to \code{colorLab} if \code{colorVar}
+#' but not \code{shapeVar} is not specified.
+#' @param shapePalette Named character vector with shape palette
+#' for \code{shapeVar}.
+#' The variable should be named with the corresponding element
+#' in \code{shapeVar}.
 #' @param xLab String, label for the x-axis.
 #' @param yLab String, label for the y-axis.
 #' @param label String, label for the visualization.
