@@ -14,6 +14,18 @@
 The variable should be named with the corresponding element
 in \code{colorVar}.}
 
+\item{shapeVar}{String, variable of \code{data} for shape of the points.
+By default, same as \code{colorVar}.}
+
+\item{shapeLab}{String, label for \code{shapeVar}.
+Set by default to \code{colorLab} if \code{colorVar}
+but not \code{shapeVar} is not specified.}
+
+\item{shapePalette}{Named character vector with shape palette
+for \code{shapeVar}.
+The variable should be named with the corresponding element
+in \code{shapeVar}.}
+
 \item{xLab}{String, label for the x-axis.}
 
 \item{yLab}{String, label for the y-axis.}
