@@ -56,7 +56,7 @@ This is used to set the default title.}
 If specified, the parameters will be grouped by this(these) variable(s) in the y-axis.}
 
 \item{colorVar}{String, variable of \code{data} with color.
-For the subject profile event plot, this variable is used
+This variable is used
 for the colors and the filling of the points.}
 
 \item{colorLab}{String, label for \code{colorVar}.}
@@ -65,17 +65,10 @@ for the colors and the filling of the points.}
 The variable should be named with the corresponding element
 in \code{colorVar}.}
 
-\item{shapeVar}{String, variable of \code{data} for shape of the points.
-By default, same as \code{colorVar}.}
+\item{shapeLab}{String with label for \code{timeStartShapeVar}\code{timeEndShapeVar}}
 
-\item{shapeLab}{String, label for \code{shapeVar}.
-Set by default to \code{colorLab} if \code{colorVar}
-but not \code{shapeVar} is not specified.}
-
-\item{shapePalette}{Named character vector with shape palette
-for \code{shapeVar}.
-The variable should be named with the corresponding element
-in \code{shapeVar}.}
+\item{shapePalette}{Named vector with (combined) shape palette for 
+\code{timeStartShapeVar}\code{timeEndShapeVar}.}
 
 \item{alpha}{Numeric with transparency, 1 by default.}
 
